# fin-forge-olap

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  settings.py
.github/workflows/: ci.yaml  pr-check.yaml
airflow/cosmos/: cosmos.conf
clickhouse/ddl/: dim_date.sql  dim_symbol.sql  fact_daily_prices.sql  fact_daily_tech_indicators.sql  load_audit.sql  market_prices_raw.sql  market_prices_stage.sql
clickhouse/specs/: dim_date.md  dim_symbol.md  fact_daily_prices.md  fact_daily_tech_indicators.md
dbt/: .user.yml  dbt_project.yml  profiles.yml  selectors.yml
tests/: test_settings.py
